// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filterEventHandlers should return an array of key/value pairs with valid event handlers 1`] = `Array []`;

exports[`filterHtmlAttributes should return an array of key/value pairs with valid HTML attributes 1`] = `
Array [
  Array [
    "testString",
    "test-string",
  ],
  Array [
    "testNumber",
    12345,
  ],
  Array [
    "testTrue",
    true,
  ],
  Array [
    "testFalse",
    false,
  ],
]
`;

exports[`filterJsxProperties should return an array of key/value pairs with valid JSX properties 1`] = `
Array [
  Array [
    "testString",
    "test-string",
  ],
  Array [
    "testNumber",
    12345,
  ],
  Array [
    "testTrue",
    true,
  ],
  Array [
    "testFalse",
    false,
  ],
  Array [
    "testArray",
    Array [
      1,
      2,
      3,
    ],
  ],
  Array [
    "testObject",
    Object {
      "foo": "bar",
    },
  ],
  Array [
    "testFunction",
    [Function],
  ],
]
`;
